codama-macros/tests/codama_attribute/fixed_size_directive/invalid_size.fail.stderr
error: expected a valid expression
 --> tests/codama_attribute/fixed_size_directive/invalid_size.fail.rs:3:23
  |
3 | #[codama(fixed_size = invalid(1, 2, 3))]
  |                       ^^^^^^^^^^^^^^^^

error: expected a literal integer
 --> tests/codama_attribute/fixed_size_directive/invalid_size.fail.rs:6:23
  |
6 | #[codama(fixed_size = invalid)]
  |                       ^^^^^^^
