codama-macros/tests/codama_attribute/fixed_size_directive/invalid_size.fail.rs
use codama::codama;

#[codama(fixed_size = invalid(1, 2, 3))]
pub struct Test;

#[codama(fixed_size = invalid)]
pub struct TestWithExpr;

fn main() {}
